--- a/ejs/common/_header.ejs
+++ b/ejs/common/_header.ejs
@@ -3,7 +3,9 @@
 		<img src="<%= RELATIVE_PATH %>img/logo.png" alt="Võ Hiệp Truyền Kỳ">
 	</a>
 	<nav class="header-nav">
-
+		<div class="header-nav__logo sp">
+			<img src="<%= RELATIVE_PATH %>img/logo.png" alt="Võ Hiệp Truyền Kỳ">
+		</div>
 		<ul class="header-nav__menu">
 			<li class="header-nav__menu-item">
 				<a href="" class="c-btn__img">
