--- a/ejs/product.ejs
+++ b/ejs/product.ejs
@@ -9,42 +9,53 @@
 		<nav class="content-nav">
 			<ul class="content-nav__menu">
 				<li class="content-nav__menu-item">
-					<a href="" class="c-btn__img ">
-						<img src="<%= RELATIVE_PATH %>img/nav-01.png" alt="trang chủ" class="img-01">
-						<img src="<%= RELATIVE_PATH %>img/nav-01-hv.png" alt="trang chủ" class="img-02">
+					<a href="" class="c-btn__img">
+						<img src="<%= RELATIVE_PATH %>img/nav-01.png" alt="trang chủ" class="img-01 pc">
+						<img src="<%= RELATIVE_PATH %>img/nav-01-sp.png" alt="trang chủ" class="img-01 sp">
+						<img src="<%= RELATIVE_PATH %>img/nav-01-hv.png" alt="trang chủ" class="img-02 pc">
+						<img src="<%= RELATIVE_PATH %>img/nav-01-sp-hv.png" alt="trang chủ" class="img-02 sp">
 					</a>
 				</li>
 				<li class="content-nav__menu-item">
 					<a href="" class="c-btn__img">
-						<img src="<%= RELATIVE_PATH %>img/nav-02.png" alt="trang chủ" class="img-01">
-						<img src="<%= RELATIVE_PATH %>img/nav-02-hv.png" alt="trang chủ" class="img-02">
+						<img src="<%= RELATIVE_PATH %>img/nav-02.png" alt="trang chủ" class="img-01 pc">
+						<img src="<%= RELATIVE_PATH %>img/nav-02-sp.png" alt="trang chủ" class="img-01 sp">
+						<img src="<%= RELATIVE_PATH %>img/nav-02-hv.png" alt="trang chủ" class="img-02 pc">
+						<img src="<%= RELATIVE_PATH %>img/nav-02-sp-hv.png" alt="trang chủ" class="img-02 sp">
 					</a>
 				</li>
 				<li class="content-nav__menu-item">
-					<a href="<%= RELATIVE_PATH %>product.html" class="c-btn__img active">
-						<img src="<%= RELATIVE_PATH %>img/nav-03.png" alt="trang chủ" class="img-01">
-						<img src="<%= RELATIVE_PATH %>img/nav-03-hv.png" alt="trang chủ" class="img-02">
+					<a href="<%= RELATIVE_PATH %>product.html#content-show" class="c-btn__img active">
+						<img src="<%= RELATIVE_PATH %>img/nav-03.png" alt="trang chủ" class="img-01 pc">
+						<img src="<%= RELATIVE_PATH %>img/nav-03-sp.png" alt="trang chủ" class="img-01 sp">
+						<img src="<%= RELATIVE_PATH %>img/nav-03-hv.png" alt="trang chủ" class="img-02 pc">
+						<img src="<%= RELATIVE_PATH %>img/nav-03-sp-hv.png" alt="trang chủ" class="img-02 sp">
 					</a>
 				</li>
 				<li class="content-nav__menu-item">
 					<a href="" class="c-btn__img">
-						<img src="<%= RELATIVE_PATH %>img/nav-04.png" alt="trang chủ" class="img-01">
-						<img src="<%= RELATIVE_PATH %>img/nav-04-hv.png" alt="trang chủ" class="img-02">
+						<img src="<%= RELATIVE_PATH %>img/nav-04.png" alt="trang chủ" class="img-01 pc">
+						<img src="<%= RELATIVE_PATH %>img/nav-04-sp.png" alt="trang chủ" class="img-01 sp">
+						<img src="<%= RELATIVE_PATH %>img/nav-04-hv.png" alt="trang chủ" class="img-02 pc">
+						<img src="<%= RELATIVE_PATH %>img/nav-04-sp-hv.png" alt="trang chủ" class="img-02 sp">
 					</a>
 				</li>
 				<li class="content-nav__menu-item">
-					<a href="<%= RELATIVE_PATH %>" class="c-btn__img">
-						<img src="<%= RELATIVE_PATH %>img/nav-05.png" alt="trang chủ" class="img-01">
-						<img src="<%= RELATIVE_PATH %>img/nav-05-hv.png" alt="trang chủ" class="img-02">
+					<a href="<%= RELATIVE_PATH %>#content-show" class="c-btn__img ">
+						<img src="<%= RELATIVE_PATH %>img/nav-05.png" alt="trang chủ" class="img-01 pc">
+						<img src="<%= RELATIVE_PATH %>img/nav-05-sp.png" alt="trang chủ" class="img-01 sp">
+						<img src="<%= RELATIVE_PATH %>img/nav-05-hv.png" alt="trang chủ" class="img-02 pc">
+						<img src="<%= RELATIVE_PATH %>img/nav-05-sp-hv.png" alt="trang chủ" class="img-02 sp">
 					</a>
 				</li>
 			</ul>
 		</nav>
-		<div class="content-show">
+		<div class="content-show" id="content-show">
 			<div class="content-show__block">
 				<div class="content-show__block-custom">
 					<h2 class="content-show__block-ttl">
 						<img src="<%= RELATIVE_PATH %>img/ttl-02.png" alt="phần thưởng">
+						<span class="content-show__block-ttl-number">03</span>
 					</h2>
 					<div class="content-show__product">
 						<div class="content-show__product-item">
