--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -8,9 +8,11 @@
 }
 
 .sec-content{
-	min-height: 100vh;
 	margin: vw(-325) 0 0;
 	padding-bottom: vw(100);
+	@include mq(){
+		padding-bottom: 0;
+	}
 	&:before{
 		content: "";
 		position: absolute;
@@ -32,25 +34,43 @@
 	background: url("../img/bg-nav.png")no-repeat;
 	background-size: 100%;
 	@include smooth-transition;
-	&:hover{
-		background: url("../img/bg-nav-hv.png")no-repeat;
+	@include mq(){
+		width: 100%;
+		height: vwsp(100);
+		background: url("../img/bg-nav-sp.png")no-repeat;
 		background-size: 100%;
 	}
+	&:hover{
+		@include mq(md-min){
+			background: url("../img/bg-nav-hv.png")no-repeat;
+			background-size: 100%;
+		}
+	}
 	&__menu{
-		@include flex(center,center,wrap);
+		@include flex(center,center,0);
 		position: absolute;
 		top: vw(140);
 		left: 0;
 		right: 0;
+		@include mq(){
+			top: vwsp(14);
+		}
 		&-item{
 			width: vw(233);
 			height: vw(71);
+			@include mq(){
+				width: 20%;
+				height: vwsp(68);
+			}
 			a{
 				display: block;
 				height: 100%;
 			}
 			&:nth-child(1){
 				margin-right: vw(-25);
+				@include mq(){
+					margin-right: vwsp(-17);
+				}
 			}
 			&:nth-child(3){
 				width: vw(386);
@@ -58,9 +78,18 @@
 				margin: 0 vw(-29);
 				position: relative;
 				z-index: 2;
+				@include mq(){
+					width: vwsp(219);
+					height: vwsp(73);
+					margin: 0 vwsp(-18);
+				}
 			}
 			&:last-child{
 				margin-left: vw(-25);
+				@include mq(){
+					margin-left: vwsp(-17);
+					width: 18.5%;
+				}
 			}
 		}
 	}
@@ -68,12 +97,19 @@
 
 .content-show{
 	width: 100%;
-	max-width: vw(1167);
 	margin: 0 auto;
 	border: 1px solid #b0644d;
 	background: #852536;
 	padding: 13px;
 	position: relative;
+	@include mq(md-min){
+		max-width: vw(1167);
+	}
+	@include mq(){
+		padding: vwsp(13) 0;
+		border-left: none;
+		border-right: none;
+	}
 	&:before,&:after{
 		content: "";
 		height: vw(10);
@@ -95,6 +131,11 @@
 		padding: vw(100) vw(40);
 		font-size: vw(18);
 		line-height: 1.8;
+		@include mq(){
+			padding: vwsp(70) vwsp(30) vwsp(50);
+			margin: 0 vwsp(-5);
+			font-size: vwsp(28);
+		}
 		&:before{
 			content: "";
 			width: vw(42);
@@ -125,16 +166,46 @@
 			position: absolute;
 			top: vw(40);
 			left: vw(40);
-			z-index: 2;
+			z-index: 3;
 		}
 		&-ttl{
 			display: block;
 			text-align: center;
 			margin-bottom: vw(40);
+			position: relative;
 			img{
 				width: vw(449);
 				display: block;
 				margin: 0 auto;
+				position: relative;
+				z-index: 1;
+				@include mq(){
+					width: vwsp(449);
+				}
+			}
+			span{
+				display: block;
+				position: absolute;
+				top: vw(-28);
+				left: 0;
+				right: 0;
+				font-size: vw(65);
+				line-height: 1;
+				font-weight: bold;
+				color: rgba(#a0622b,0.45);
+				@include mq(){
+					top: vwsp(-28);
+					font-size: vwsp(65);
+				}
+				&:before{
+					content: "";
+					position: absolute;
+					bottom: 0;
+					top: 0;
+					left: 0;
+					right: 0;
+					background: linear-gradient(180deg, rgba(0, 0, 0, 0.0) 0%, #ede7cd 100%);
+				}
 			}
 		}
 
@@ -157,7 +228,7 @@
 			padding: 0 0 0 vw(70);
 			margin-bottom: vw(40);
 			@include mq(){
-				font-size: vwsp(25);
+				font-size: vwsp(30);
 				padding: 0 0 0 vwsp(70);
 				margin-bottom: vwsp(40);
 			}
@@ -185,7 +256,7 @@
 			padding: 0 0 0 vw(80);
 			margin-bottom: vw(25);
 			@include mq(){
-				font-size: vwsp(25);
+				font-size: vwsp(30);
 				padding: 0 0 0 vwsp(80);
 				margin-bottom: vwsp(25);
 			}
